tests/unit/evaluation/minizinc/general/assert_bad_1.err_exp
assert_bad_1.mzn:12:
  error: 
  In constraint item 
  In assert application 
  Assertion failure: a not decreasing
