tests/unit/evaluation/minizinc/general/assert_bad_1.err_exp3
mzn2fzn: error: 
mzn2fzn:   assert_bad_1.mzn:12 
mzn2fzn:   In constraint. 
mzn2fzn:   In 'assert' expression. 
mzn2fzn:   Assertion failure: "a not decreasing"
